# backend

./: db.sqlite3  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
backendapi/: .env  settings.py  urls.py
company_api/: admin.py  models.py  serializers.py  urls.py  views.py
company_api/migrations/: 0001_initial.py
